[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Particles/ScreenTransition/Transition.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
length = 7.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 7.1, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "teleport"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 0.353554, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.875 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Transition" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 1 )
anims/teleport = SubResource( 2 )
[connection signal="goto_next_level" from="." to="." method="_on_Transition_goto_next_level"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
